--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,35 @@
 @charset "UTF-8";
+
+/* @import url('endereço da fonte')*/
+
+* {
+    font-family: Arial, Helvetica, sans-serif;    
+    /* height: 100%; */
+}
+/*
+body {
+    background-image: linear-gradient(to right, #011C40, #144C59);
+}
+
+main {
+    border-radius: 10px;
+    background-color: #63A693;
+    width: 1300px;
+    padding: 10px;
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
+    color: #011126;
+}
+
+h2 {
+    color: #011126;
+}
+
+p {
+    text-align: justify;
+
+}
+*/
