Alterações no layout do site, teste de combinações da paleta de cores e reorganização geral do código.

--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,47 @@
 @charset "UTF-8";
+/*@import url('endereço da fonte')*/
 
-/* @import url('endereço da fonte')*/
+:root {
+    --cor1: #00040D;
+    --cor2: #011C40;
+    --cor3: #011126;
+    --cor4: #144C59;
+    --cor5: #63A693;
+
+    --fonte-padrao: Arial, Helvetica, sans-serif;
+}
 
 * {
-    font-family: Arial, Helvetica, sans-serif;    
-    /* height: 100%; */
-}
-
-/*
-body {
-    background-image: linear-gradient(to right, #011C40, #144C59);
-}
-
-main {
-    border-radius: 10px;
-    background-color: #63A693;
-    width: 1300px;
-    padding: 10px;
+    font-family: var(--fonte-padrao);    
     margin: auto;
+    padding: 5px;
+
+    text-decoration: none;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.350);
 }
 
-*/
-div#social{
+header {
+    /*background-image: linear-gradient(to bottom, var(--cor4), var(--cor5));*/
+    color: var(--cor1);
+}
+
+body {
+    background-color: var(--cor5);
+    color: var(--cor1); 
+}
+
+nav#social{
     display: inline-block;
     align-items: center;
     justify-content: center;
     justify-items: center;
     display: flex;
+    margin: auto;
+    
+    min-width: 5px;
+    max-width: 300px;
 }
 
-a {
-    text-decoration: none;
-    padding: 10px;
-    margin: 10px;
-}
 /*
 h1 {
     text-align: center;
@@ -43,8 +51,14 @@ h1 {
 h2 {
     color: #011126;
 }
+*/
 
 p {
     text-align: justify;
+    margin: 15px 0px;
+    text-indent: 30px;
 }
-*/
+
+footer {
+    background-image: linear-gradient(to bottom, var(--cor5), var(--cor4));
+}
