--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,17 @@
 
 * {
     font-family: var(--fonte-padrao);    
-    margin: auto;
-    padding: 5px;
 
     text-decoration: none;
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.350);
 }
 
 header {
-    /*background-image: linear-gradient(to bottom, var(--cor4), var(--cor5));*/
+    background-color: var(--cor4);
     color: var(--cor1);
+    padding: 20px 10px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid var(--cor1);
 }
 
 body {
@@ -30,28 +31,31 @@ body {
     color: var(--cor1); 
 }
 
-nav#social{
-    display: inline-block;
+nav#social {
+    display: flex;
     align-items: center;
     justify-content: center;
-    justify-items: center;
-    display: flex;
-    margin: auto;
+    margin: 10px auto;
     
     min-width: 5px;
     max-width: 300px;
+    gap: 10px;
 }
 
-/*
-h1 {
-    text-align: center;
-    color: #011126;
+nav#social img {
+    width: 32px;
+    height: 32px;
+    padding: 0;
 }
 
-h2 {
-    color: #011126;
+article {
+    border-bottom: 1px solid var(--cor4);
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
 }
-*/
 
 p {
     text-align: justify;
@@ -61,4 +65,7 @@ p {
 
 footer {
     background-image: linear-gradient(to bottom, var(--cor5), var(--cor4));
+    text-align: center;
+    padding-top: 20px;
+    border-top: 2px solid var(--cor1);
 }
