--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ nav#social a img {
     width: 32px;
     height: 32px;
     padding: 0;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.2s ease-in-out;
 }
 
 nav#social a:hover img {
@@ -131,9 +131,11 @@ article.tools:hover {
 }
 
 footer {
+    background-color: var(--cor5);
     text-align: center;
-    padding-top: 20px;
+    padding-top: 10px;
     border-top: 2px solid var(--cor1);
+    
 }
 
 @media (max-width: 650px) {
