--- a/styles.css
+++ b/styles.css
@@ -32,15 +32,6 @@ header {
     padding: 30px 40px;
     margin-bottom: 10px;
     border-bottom: 2px solid var(--cor1);
-    border-color: var(--cor1);
-    border-radius: 0px 0px 10px 10px;
-}
-
-main {
-    min-width: 300px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px 10px;
 }
 
 header h1 {
@@ -60,72 +51,81 @@ header h2 {
 h3 {
     font-size: 1.5em;
     color: var(--cor5);
-    border-bottom: 1px dashed var(--cor4);
+    border-bottom: 1px dashed var(--cor3);
     padding-bottom: 5px;
     margin-bottom: 10px;
 }
 
-p {
-    text-align: justify;
-    margin: 15px 0px;
-    text-indent: 0;
+main {
+    display: grid;
+    grid-template-columns: auto 90vw auto;
+    gap: 20px;
+    margin: 0 auto;
+    padding: 20px 10px;
 }
 
-nav#social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px auto;
+main h1 {
+    text-shadow: 2px 2px 0px var(--cor1);
+}
+
+main li {
+    text-align: left;
+    margin-left: -40px;
+    margin-bottom: 15px;
+    text-shadow: 2px 2px 0px var(--cor1);
+    list-style: none;
+}
+
+section.perfil {
+    color: var(--cor4);
+    background-color: var(--cor2);
+    padding: 20px;
     
-    min-width: 5px;
-    max-width: 300px;
-    gap: 15px;
+    border-radius: 10px;
+    grid-column: 1;
+    text-shadow: 2px 2px 0px var(--cor1);
 }
 
-nav#social a img {
-    width: 32px;
-    height: 32px;
-    padding: 0;
-    transition: transform 0.2s ease-in-out;
+section.perfil img {
+    width: 300px;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 5px solid var(--cor4);
+    outline: 5px solid var(--cor1);
+    display: block;
+    margin-bottom: 15px;
 }
 
-nav#social a:hover img {
-    transform: scale(1.1)
+section.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content:center;
+    gap: 20px;
+    max-width: 78%;
 }
 
-section.boxes {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    gap: 40px;
-
-    padding: 20px 0;
-}
-
-article.tools {
-    flex: 1 1 300px;
-
+article.item {
     background-color: var(--cor1);
     color: var(--cor5);
-    /* border: 1px solid var(--cor5);*/
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.9);
-    transition: transform 0.3s ease;
-    
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease;   
     border-bottom: none;
     padding: 25px;
 }
 
-article.tools h3 {
+article.item h3 {
     font-size: 1.6em;
     color: var(--cor5);
-    border-bottom: 1px dashed var(--cor4);
+    border-bottom: 1px dashed var(--cor3);
     padding-bottom: 5px;
     margin-top: 0;
     margin-bottom: 10px;
 }
 
-article.tools:hover {
+article.item:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.6);
 }
@@ -138,6 +138,32 @@ footer {
     
 }
 
+nav#social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 2em;
+
+    margin: 10px auto;
+    
+    min-width: 5px;
+    max-width: 300px;
+    gap: 15px;
+}
+
+nav#social a i {
+    color: var(--cor2);
+    padding: 0;
+    transition: transform 0.1s ease-in-out;
+}
+
+nav#social a:hover i {
+    transform: scale(1.1);
+    color: var(--cor1);
+}
+
+/* Para dispositvos móveis */
 @media (max-width: 650px) {
     header {
         padding: 20px 10px;
@@ -151,7 +177,7 @@ footer {
         font-size: 1em;
     }
 
-    section.boxes {
+    section.item {
         gap: 15px;
     }
 
@@ -159,7 +185,7 @@ footer {
         padding: 0 5px;
     }
 
-    article.tools {
+    article.item {
         padding: 20px;
     }
 }
