Inserção de parâmetro CSS
Inserção de parâmetro no código CSS.

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ article.item h3 {
 article.item:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.6);
+    cursor: pointer;
 }
 
 footer {
