--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ section.container {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    align-items: start;
 }
 
 article.item {
@@ -116,7 +117,6 @@ article.item {
     transition: transform 0.3s ease;   
     border-bottom: none;
     padding: 25px;
-    min-width: 250px;
 }
 
 article.item h3 {
@@ -175,7 +175,7 @@ nav#social a:hover i {
 
     main {
         flex-direction: row;
-        align-items: flex-start;
+        align-items: stretch;
     }
 
     section.perfil {
@@ -186,13 +186,5 @@ nav#social a:hover i {
 
     section.container {
         flex: 2;
-    }
-}
-
-/* Para telas ainda maiores */
-@media (min-width: 1200px){
-    section.container {
-        display: grid;
-        gap: 20px;
     }
 }
