Alteração de ícone
1. Alteração do ícone do site para facilitar a implementação do código CSS no switch de alteração do modo de cores.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
     --fonte-padrao: 'Source Code Pro', monospace;
 
-    --icon-toolbox: url('images/toolbox-solid-full.svg');
+    --icon-toolbox: url('images/switch-icon.svg');
 }
 
 * {
